# justdoit

./: .gitignore  CMakeLists.txt  README.md
src/cpprestsdk/: CMakeLists.txt  server.cpp
tests/: servertests.cpp
